# simple-im

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
config/: log.yaml
public/: index.html  record.sqlite  run.sh
src/: id.rs  local_time.rs  main.rs  server.rs  session.rs  sql.rs  status.rs
