[package]
name = "chatroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"

clap = { version = "4.0.27", features = ["derive"] }
log = "*"
log4rs = "1.2.0"
once_cell = "1"
serde_yaml = "*"
serde = "*"
serde_json = "*"

rusqlite = "0.28"
chrono = "0.4"